[gd_scene load_steps=8 format=3 uid="uid://bd8iijxjsveu1"]

[ext_resource type="Script" path="res://scenes/classes/button/IconButton.gd" id="1_3te8o"]
[ext_resource type="Script" path="res://scenes/mainmenu/main_menu.gd" id="1_h1105"]
[ext_resource type="Texture2D" uid="uid://bvgsw0janrdig" path="res://assets/kenney/arrow_e.svg" id="3_sbuf4"]
[ext_resource type="PackedScene" uid="uid://qpw7pev76fip" path="res://scenes/mainmenu/credits/credits.tscn" id="5_1lrif"]
[ext_resource type="Texture2D" uid="uid://c488wksxm1kex" path="res://assets/ui/menu.png" id="5_lwnmd"]
[ext_resource type="Texture2D" uid="uid://dlohnic36da2x" path="res://assets/ui/GameTitle.png" id="6_lu5jt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o5jto"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1105")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_lwnmd")
expand_mode = 5
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -40.0
offset_top = 8.0
offset_right = 553.0
offset_bottom = 331.0
rotation = -0.0925025
texture = ExtResource("6_lu5jt")

[node name="Play" type="Button" parent="."]
layout_mode = 2
offset_left = 104.0
offset_top = 360.0
offset_right = 341.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_o5jto")
text = "Play"
icon = ExtResource("3_sbuf4")
flat = true
script = ExtResource("1_3te8o")

[node name="Settings" type="Button" parent="."]
layout_mode = 2
offset_left = 64.0
offset_top = 624.0
offset_right = 293.0
offset_bottom = 699.0
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_o5jto")
text = "Settings"
icon = ExtResource("3_sbuf4")
flat = true
script = ExtResource("1_3te8o")

[node name="Credits2" type="Button" parent="."]
layout_mode = 2
offset_left = 88.0
offset_top = 768.0
offset_right = 296.0
offset_bottom = 843.0
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_o5jto")
text = "Credits"
icon = ExtResource("3_sbuf4")
flat = true
script = ExtResource("1_3te8o")

[node name="Credits" parent="." instance=ExtResource("5_1lrif")]
visible = false
layout_mode = 1

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Credits2" to="." method="_on_credits_pressed"]
